Login backpressed event

--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="24dp"
-        android:text="Ranking"
+        android:text="Search"
         />
     <LinearLayout
         android:layout_width="match_parent"
