--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -79,6 +79,23 @@
             android:layout_height="300dp"
             android:orientation="horizontal"
             />
+        <TextView
+            android:id="@+id/lblrecent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="최근 본 상품"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recent_view"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:orientation="horizontal"
+            />
     </LinearLayout>
     </ScrollView>
 
