--- a/app/src/main/res/layout/cartitem_layout.xml
+++ b/app/src/main/res/layout/cartitem_layout.xml
@@ -4,6 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="100dp"
     android:orientation="horizontal">
+    <CheckBox
+        android:id="@+id/itemchk"
+        android:layout_width="30dp"
+        android:scaleX="1.2"
+        android:scaleY="1.2"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+/>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="100dp"
         android:layout_height="100dp">
@@ -21,23 +30,59 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:layout_marginLeft="5dp"
         android:layout_height="100dp"
         android:orientation="vertical">
         <TextView
             android:id="@+id/item_brand"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="브랜드"
             android:textSize="16sp" />
     <TextView
         android:id="@+id/item_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="10"
+        android:maxLength="20"
+        android:maxLines="1"
+        android:text="상품명"
         android:textSize="18sp" />
+
         <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/decrease"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/Txtcount"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:text="1"
+                android:textSize="18sp"
+                android:textAlignment="center"
+                app:layout_constraintLeft_toRightOf="@id/decrease"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+            <Button
+                android:id="@+id/increase"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="5dp"
+                app:layout_constraintLeft_toRightOf="@id/Txtcount"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
             <TextView
                 android:id="@+id/item_price"
                 android:layout_width="wrap_content"
@@ -45,9 +90,11 @@
                 android:text="188,000원"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:textSize="16sp" />
+                android:textSize="24sp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </LinearLayout>
+
+
+
+
 </LinearLayout>
