--- a/app/src/main/res/layout/fragment_four.xml
+++ b/app/src/main/res/layout/fragment_four.xml
@@ -14,20 +14,106 @@
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
+
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
-
+    <CheckBox
+        android:id="@+id/itemchk"
+        android:layout_width="30dp"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/labelcart"
+        />
+    <TextView
+        android:id="@+id/Txttotalselected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="전체 2개"
+        android:layout_marginTop="5dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/itemchk"
+        app:layout_constraintTop_toBottomOf="@id/labelcart" />
+    <Button
+        android:id="@+id/btn_delete"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="선택 삭제"
+        app:layout_constraintTop_toBottomOf="@id/labelcart"
+        app:layout_constraintRight_toRightOf="parent"
+        />
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cartview"
                 android:layout_width="match_parent"
-                android:layout_height="600dp"
+                android:layout_height="450dp"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/labelcart"
+                app:layout_constraintTop_toBottomOf="@id/itemchk"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 />
+    <TextView
+        android:id="@+id/labelItemtoPay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="결제할 상품"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cartview"
+        />
 
+    <TextView
+        android:id="@+id/Txttotalcount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="총 2개"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/labelItemtoPay"
+        app:layout_constraintBottom_toBottomOf="@id/labelItemtoPay" />
+    <TextView
+        android:id="@+id/lbltotal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="결제 금액"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/labelItemtoPay"
+        app:layout_constraintLeft_toLeftOf="parent" />
+    <TextView
+        android:id="@+id/txttotal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="199999 원"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/labelItemtoPay"
+        app:layout_constraintRight_toRightOf="parent" />
+    <Button
+        android:id="@+id/btn_pay"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"
+        android:text="199999원 결제하기"
+        app:layout_constraintTop_toBottomOf="@id/lbltotal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
