--- a/app/src/main/res/layout/cartitem_layout.xml
+++ b/app/src/main/res/layout/cartitem_layout.xml
@@ -28,30 +28,50 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:scaleType="centerCrop"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_height="100dp"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/item_brand"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="브랜드"
-            android:textSize="16sp" />
-    <TextView
-        android:id="@+id/item_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxLength="20"
-        android:maxLines="1"
-        android:text="상품명"
-        android:textSize="18sp" />
-
         <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+            <TextView
+                android:id="@+id/item_brand"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:text="브랜드"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/item_brand"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:maxLength="20"
+                android:maxLines="1"
+                android:text="상품명"
+                android:textSize="18sp" />
+            <Button
+                android:id="@+id/showaiimg"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:text="AI"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
+            >
 
             <Button
                 android:id="@+id/decrease"
