--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,6 +52,15 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"/>
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_kakaologin"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="10dp"
+            android:foreground="@drawable/kakao_login_medium_narrow"
+            android:gravity="center" />
         <Button
             android:id="@+id/btn_showselection"
             android:gravity="center"
@@ -60,8 +69,6 @@
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:text="Create account"/>
-
-
         <LinearLayout
             android:id="@+id/prefer"
             android:layout_width="match_parent"
