--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="Home"
         android:layout_marginLeft="15dp"
-        android:fontFamily="@font/helvetica"
+        android:fontFamily="@font/helveticaBold"
         android:textSize="30sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
