--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -12,18 +12,17 @@
         android:layout_height="wrap_content"
         android:text="Home"
         android:layout_marginLeft="15dp"
-        android:fontFamily="@font/helveticaBold"
+        android:fontFamily="@font/helvetica_bold"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:paddingBottom="20dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:scrollbars="none"
         app:layout_constraintTop_toBottomOf="@id/labelHome">
@@ -39,7 +38,6 @@
         android:text="당신을 위한 추천"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginTop="20dp"
         />
 
     <androidx.recyclerview.widget.RecyclerView
